--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,12 @@ body:before {
 }
 
 /*** Navbar ***/
+/*
+nav {
+    width: 100%;
+    position: fixed !important;
+}
+*/
 
 .navbar-nav {
     text-align: center;
@@ -318,7 +324,6 @@ nav .logo {
 }
 
 @media (max-width: 1023px) {
-
     .introText1 h1,
     .introText2 h1 {
         font-size: 25px !important;
@@ -326,7 +331,6 @@ nav .logo {
 }
 
 @media (max-width: 985px) {
-
     .introText1 h1,
     .introText2 h1 {
         font-size: 20px !important;
@@ -342,7 +346,6 @@ nav .logo {
 }
 
 @media (max-width: 985px) {
-
     .introText1,
     .introText2 {
         margin: auto;
@@ -351,7 +354,6 @@ nav .logo {
 }
 
 @media (max-width: 360px) {
-
     .introText1 h1,
     .introText2 h1 {
         font-size: 15px !important;
@@ -396,7 +398,7 @@ nav .logo {
     background-size: cover;
 }
 
-.breadcrumb-item+.breadcrumb-item::before {
+.breadcrumb-item + .breadcrumb-item::before {
     color: #999999;
 }
 
@@ -452,7 +454,6 @@ nav .logo {
     text-align: justify;
     color: var(--dark);
 }
-}
 
 /*** Courses ***/
 
@@ -460,8 +461,12 @@ nav .logo {
     margin-top: 50px;
 }
 
-.courses .wow p {
+.courses
+
+/*.wow*/
+p {
     text-align: center !important;
+    /**/
 }
 
 .courses {
@@ -485,6 +490,8 @@ nav .logo {
 
 .courses h1 {
     font-size: 26px;
+    /*color: var(--primary);*/
+    color: var(--secondary);
 }
 
 .courses-item .courses-overlay {
@@ -502,11 +509,10 @@ nav .logo {
     transition: 0.5s;
 }
 
-.courses-item{
+.courses-item {
     transform: scale(1);
     transition: 0.4s;
     box-shadow: 2px 2px 7px 0.5px var(--tertiary);
-
 }
 
 .courses-item:hover .courses-overlay {
@@ -528,10 +534,9 @@ nav .logo {
     background: unset;
     margin: 25px;
     max-height: 450px;
-
 }
 
-.courses-item:hover{
+.courses-item:hover {
     transform: scale(1.07);
 }
 
@@ -551,16 +556,25 @@ nav .logo {
 /*** Team ***/
 .team-items {
     margin: -0.75rem;
+    display: flex;
+    justify-content: center;
 }
 
 .team-item {
     padding: 0.75rem;
-    /*CHECK ANIM*/
 }
 
+.team-item h5 {
+    font-size: 16px !important;
+    color: var(--primary);
+}
 
+.team-item span {
+    color: var(--dark);
+    font-size: 14px !important;
+}
 
-
+/*CHECK ANIM*/
 
 .team-item::after {
     position: absolute;
@@ -599,10 +613,14 @@ nav .logo {
     opacity: 1;
 }
 
-.memberDes{
-    color: var(--light)!important;
+.team-social {
+    padding: 5px;
 }
 
+.team-social p {
+    color: var(--light) !important;
+    font-size: 12px !important;
+}
 
 /*** Testimonial ***/
 .testimonial-carousel .owl-dots {
@@ -635,7 +653,39 @@ nav .logo {
     height: 150px;
 }
 
+#témoignages .fa {
+    color: var(--secondary) !important;
+}
+
 /*** Footer ***/
+
+.footer {
+    background-color: var(--light) !important;
+    color: var(--dark);
+}
+
+.footer p {
+    text-align: left !important;
+}
+
+.footer a {
+    color: var(--primary) !important;
+}
+
+.footLogo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footLogo h4 {
+    color: var(--dark) !important;
+    margin-left: -25px;
+    padding: 0;
+    text-align: center;
+}
+
 .footer .btn.btn-link {
     display: block;
     margin-bottom: 5px;
