--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,9 @@ body:before {
     bottom: 30px;
     z-index: 99;
     transition: 0.4s;
-    border: none! !important;
+    border: none ! !important;
 }
+
 / .back-to-top:hover {
     background-color: var(--secondary) !important;
 }
@@ -164,14 +165,14 @@ body:before {
     justify-content: center;
     font-weight: normal;
 }
+.text-white {
+    color: var(--light);
+}
 
 /*** Navbar ***/
-/*
 nav {
-    width: 100%;
-    position: fixed !important;
+    background-color: var(--light);
 }
-*/
 
 .navbar-nav {
     text-align: center;
@@ -427,8 +428,29 @@ nav .logo {
     color: var(--dark);
 }
 
+.aboutM .fadeInUp {
+    padding: 15px !important;
+    background-color: var(--light);
+}
+
+.aboutM h1 {
+    font-size: 35px;
+    color: var(--secondary);
+    text-align: center;
+    padding-bottom: 15px;
+    border-bottom: 2px solid var(--primary);
+    width: fit-content;
+    /*text-transform: uppercase;*/
+}
+
 .aboutM h6 {
     margin-top: 25px;
+}
+
+.vidWrap {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
 }
 
 @media (min-width: 991.98px) {
@@ -464,10 +486,17 @@ nav .logo {
     text-align: justify;
     color: var(--dark);
 }
+
 /*** Actu ***/
 .Actu iframe {
     height: 700px !important;
 }
+
+.Actu h1 {
+    text-transform: uppercase;
+    background: unset !important;
+}
+
 /*** Courses ***/
 
 .outils {
@@ -493,6 +522,19 @@ nav .logo {
 .courses-overlay {
     background: rgba(0, 0, 0, 0.7) !important;
 }
+#témoignages p {
+    text-transform: initial;
+}
+
+.testiBtn {
+    width: 50%;
+    margin: auto;
+    max-width: 300px;
+    font-size: 14px !important;
+}
+.outilTitle {
+    text-transform: uppercase;
+}
 
 .wow2 {
     background: unset;
@@ -500,9 +542,9 @@ nav .logo {
 
 .courses h1,
 .Actu h1 {
-    font-size: 26px;
-    /*color: var(--primary);*/
+    /*font-size: 26px;*/
     color: var(--secondary);
+    background: unset !important;
 }
 
 .courses-item .courses-overlay {
@@ -633,12 +675,18 @@ nav .logo {
     font-size: 12px !important;
 }
 
+.teamTitle {
+    background-color: unset !important;
+    color: var(--secondary) !important;
+}
 /*** Testimonial ***/
+
 .testimonial-carousel .owl-dots {
     height: 40px;
     margin-top: 25px;
     display: flex;
     align-items: center;
+
     justify-content: center;
 }
 
@@ -651,12 +699,14 @@ nav .logo {
     background: transparent;
     border: 2px solid var(--primary);
     transition: 0.5s;
+    background: var(--primary);
 }
 
 .testimonial-carousel .owl-dot.active {
     width: 40px;
     height: 40px;
-    background: var(--primary);
+    background: var(--secondary);
+    border: 2px solid var(--secondary);
 }
 
 .testimonial-carousel .owl-item img {
@@ -664,7 +714,29 @@ nav .logo {
     height: 150px;
 }
 
-#témoignages .fa {
+.testiW,
+#témoignages .text-center,
+/*#équipe .text-center*/ {
+    background-color: unset !important;
+    text-transform: uppercase;
+}
+
+#témoignages p {
+    text-transform: initial;
+}
+
+.testiBtn {
+    width: 50%;
+    margin: auto;
+    max-width: 300px;
+    font-size: 14px !important;
+}
+
+.testiBtn i {
+    color: var(--light) !important;
+}
+
+.testiFa1 {
     color: var(--secondary) !important;
 }
 
@@ -691,6 +763,7 @@ nav .logo {
     color: var(--secondary) !important;
     margin: auto;
 }
+
 .footLogo {
     display: flex;
     flex-direction: column;
@@ -698,6 +771,7 @@ nav .logo {
     align-items: center;
     padding: 0;
 }
+
 .footLogo img {
     max-width: 80px;
 }
@@ -718,6 +792,7 @@ nav .logo {
     text-align: center !important;
     border: none;
 }
+
 .modalB:hover,
 .modalB:focus,
 .modalB:active,
@@ -726,17 +801,21 @@ nav .logo {
     color: inherit;
     border: none;
 }
+
 .modal-title {
     color: var(--secondary);
 }
+
 .modal-header {
     border-color: var(--primary);
 }
+
 .modal-body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
+
 .modal-body div {
     margin: 15px;
 }
